fix menu item spacing

--- a/sass/ui-components/_menu.scss
+++ b/sass/ui-components/_menu.scss
@@ -68,7 +68,7 @@ Use as a guide for markup.
 
 	.hasJS & {
 		display: block;
-		padding: $space $space/2;
+		padding: $space;
 		color: $C_textSecondary !important;
 		&:hover,
 		&:active {
